# citra

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/binary_translation/: ARMFuncs.cpp  ARMFuncs.h  ARM_funcs.cpp  ARM_funcs.h  BinarySearch.h  BlockColors.cpp  BlockColors.h  CMakeLists.txt  CodeGen.cpp  CodeGen.h  Disassembler.cpp  Disassembler.h  Instruction.cpp  Instruction.h  InstructionBlock.cpp  InstructionBlock.h  MachineState.cpp  MachineState.h  ModuleGen.cpp  ModuleGen.h  TBAA.cpp  TBAA.h  block_colors.cpp  code_gen.cpp  disassembler.cpp  disassembler.h  instruction_block.cpp  instruction_block.h  machine_state.cpp  machine_state.h  main.cpp  module_gen.cpp  module_gen.h  tbaa.cpp  tbaa.h
src/binary_translation/Instructions/: Arithmetic.cpp  Arithmetic.h  Branch.cpp  Branch.h  DataProcessing.cpp  DataProcessing.h  Instruction.cpp  Instruction.h  Ldr.cpp  Ldr.h  MovShift.cpp  MovShift.h  Str.cpp  Str.h  Types.h  arithmetic.cpp  arithmetic.h  mov_shift.cpp  mov_shift.h
src/citra/: CMakeLists.txt
src/citra/emu_window/: emu_window_glfw.cpp
src/citra_qt/: CMakeLists.txt  bootmanager.cpp
src/common/: emu_window.cpp  emu_window.h
src/common/logging/: backend.cpp  log.h
src/core/: CMakeLists.txt  mem_map_funcs.cpp
src/core/arm/dyncom/: arm_dyncom_interpreter.cpp
src/core/binary_translation/: BinaryTranslationLoader.cpp  BinaryTranslationLoader.h  binary_translation_loader.cpp  binary_translation_loader.h
src/core/hle/: result.h
src/core/hle/applets/: mii_selector.cpp  mii_selector.h
src/core/hle/service/: gsp_gpu.cpp
src/core/hle/service/fs/: fs_user.cpp
src/core/hle/service/hid/: hid.cpp
src/core/loader/: 3dsx.cpp  loader.cpp  loader.h  ncch.cpp
src/video_core/: CMakeLists.txt  command_processor.cpp  pica.h  pica_types.h  shader_translator.cpp
src/video_core/renderer_opengl/: gl_rasterizer.cpp  gl_rasterizer.h  gl_shader_gen.cpp  gl_shader_util.h  gl_shaders.h  renderer_opengl.cpp  renderer_opengl.h
src/video_core/shader/: shader.cpp
